# pbdl-book

./: .gitignore  diffphys-code-burgers.ipynb  intro-teaser.ipynb  overview-burgers-forw.ipynb  overview-ns-forw.ipynb  physicalloss-code.ipynb  pyproject.toml  supervised-airfoils.ipynb
